Added bunch of stuff

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -1,9 +1,11 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{appendices}
-\section{CSAC data acquisition}
-\subsection{Program}\label{CL}
+\chapter{Data acquisition}
+\section{CSAC Logger source code}\label{CL}
 	\lstinputlisting[language=Python]{./source_files/csac_logger.py}
-\subsection{Schematic}\label{CLS}
+\section{GPS Logger source code}\label{GL}
+	\lstinputlisting[language=Python]{./source_files/gps_logger.py}	
+\section{Logger setup schematic}\label{CLS}
 	 \includegraphics[scale=0.5]{csac_logger.pdf}
 \end{appendices}
