--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -45,7 +45,7 @@
 
 % Setting tty font?
 \lstset{ %
-  basicstyle=\ttfamily\tiny,     
+  basicstyle=\ttfamily\small,     
   backgroundcolor=\color{white},   % choose the background color
   breaklines=true,                 % automatic line breaking only at whitespace
   captionpos=b,                    % sets the caption-position to bottom
@@ -75,14 +75,11 @@ Here goes foreword
 % Hackish code to keep counters and white pages at bay
 \thispagestyle{empty}
 \setcounter{page}{0}
-%\newpage
 \tableofcontents
 \thispagestyle{empty}
 \setcounter{page}{0}
-%\newpage
 \thispagestyle{empty}
 \setcounter{page}{0}
-%\newpage
 \clearpage
 \setcounter{page}{1}
 
@@ -93,14 +90,14 @@ Here goes foreword
 
 % Chapter about the csac and it's connectivity?
 
-\newpage
 \chapter{Method}
+\section{Choice of hardware}
+Why did you opt for the Raspberry PI?
+
 \section{Data acquisition}
 In order to create an accurate clock-model of the CSAC, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the CSAC will correct it's frequency based on either a 1 PPS (Pulse per second) signal or 10 MHz signal. The Ublox-M8T GPS receiver was specifically designed for timing purposes and was used in this instance to provide the 1 PPS signal for disciplining purposes. A similar approach was used in order to collect GPS data. Data from two Ublox-M8T was gathered over the same time period as the data gathered from the CSAC. By gathering the data over the same period, it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the CSAC. It also provided valuable data that could be used to tune the spoofing detection algorithms in the CSAC SMACC. The data gathering was done by simple Python scripts (\ref{CL} and \ref{GL}) running on a computer connected to the receivers and the CSAC (\ref{CLS})
 
-\newpage
-
-\section{Programming of SMACC software}
+\section{SMACC software Programming}
 
 \subsection{Intro}
 The software that makes the SMACC smart, consists of multiple modules. There is a server that manages connection and acts as an interface to the system as a whole. There is a client that connects to the server and relays relevant GPS data and finally, the software running on the micro-controller embedded in the CSAC. The latter is of course not made by us, but paramount in order for our proposal to work. In this chapter, these different parts or modules will be explained.
@@ -116,10 +113,10 @@ The SMACC software was written in C99. This might seem like a strange choice whe
 \end{itemize}
 The three first points probably makes perfect sense, but to me it was just as important that i learned a new and exciting language. 
 
-\subsubsection{The client software}
+\subsection{The client software}
 The client software takes the servers IP and port as parameter. It then loads its configuration file and reads the path to the connected GPS receiver and an ID number. The GPS receiver is used to fetch GPS data and the ID number is used to identify itself for the server. It then parses the NMEA data it receives and relays the relevant data to the server. 
 
-\subsubsection{The server}
+\subsection{The server}
 The server follows a standard web server-like pattern:
 \begin{itemize}
   \item Wait for connections
@@ -132,35 +129,52 @@ However, the similarities end there. The servers job can be divided into three p
   \item Handle information received from clients (state)
   \item Process information received from clients
 \end{itemize}
-\subsubsection{Data structures and shared memory}
-Since the server needs to have access to all the data the clients transmit, it uses a shared memory model. Every process that forks out from the server is given access to this memory area. Even the processes themselves have access to each others memory. One might make the point that this voids the idea of processes, and one might be correct. The shared memory is created using MMAP.
+
+\subsection{Detection algorithms}
+Write about our filters.
+
+\subsection{Data structures and shared memory}
+Since the server needs to have access to all the data the clients transmit, it uses a shared memory model. Every process that forks out from the server is given access to this memory area. Even the processes themselves have access to each others memory. One might make the point that this voids the idea of processes, and one might be correct (see \ref{discussion}). The shared memory is created using the GNU library's Memory Mapped I/O (MMAP). Although typically used to map files to a region of memory, MMAP can also be used to create an anonymous map which are not connected to file but rather for sharing data between tasks without using files.
+
 \begin{lstlisting}
 client_list = mmap(NULL, 
                   (s_conf->max_clients * sizeof(struct client_table_entry)), 
-                  PROT_READ | PROT_WRITE, MAP_SHARED | MAP_ANONYMOUS, -1, 0);
+                  PROT_READ | PROT_WRITE,
+                  MAP_SHARED | MAP_ANONYMOUS,
+                  -1, 0);
 \end{lstlisting}
-The example over shows how shared memory is allocated. The observant reader will notice that there is allocated memory for a finite number of clients. This is unfortunate but necessary and not really much a problem. The reason however, is that a process as a child inherits all the variables and state from it's parent. This also means that the shared memory has to have the same layout throughout the programs execution for all the processes to have the same "version" of the shared memory. As long as a process only uses the shared memory allocated for itself, it is not a problem, but once it attempts to access the memory of a younger sibling process, it cannot access that area and the process will crash. In this application however, we always know how many clients are going to connect. Even when in doubt, the maximum number of clients can be grossly overestimated and configured in order to make sure that there is room.
 
-\subsubsection{Managing connections}
+The example over shows how shared memory is allocated. The observant reader will notice that there memory is allocated for a finite number of clients. This is unfortunate but necessary: The fork operation creates a completely separate address space for the child process but the child still has a complete copy of parents memory segments. Since the child process is completely separated from the parent, any changes in the shared memory done by the parent will not be "reflected" in the child's memory. In other words, the entire shared memory \textit{has} to be initialized before any fork operations are done. Failing to do so will result in a segmentation fault once a process attempts to access the memory of a younger sibling. In this application however, we always know how many clients are going to connect. Even when in doubt, the maximum number of clients can be grossly overestimated and configured in order to make sure that there is room for more clients.
 
-\subsubsection{The CSAC}
+\subsection{Managing connections}
+
+\subsection{The CSAC}
+Write about the CSAC and the serial communication. Perhaps mention the how the communication between the server and the CSAC works?
+
+\chapter{Testing}
+
+\section{Software performance}
+How was the performance of the server? Slow? Buggy?
+
+\section{Preliminary test}
+Wave those antennas around
+
+\section{Spoof test}
+\subsection{Challenges}
+What if their clocks sucks?
+
+\subsection{The test}
+Write about the test
+
+\chapter{Results and discussion}\label{discussion}
 
 \subsection{Different approaches}
 What is the point of using processes when they aren't even separated? All the bad with none of the good one might argue. 
 
 Why even do this in C? Would be faster to do it in Python and rather just have all the Raspberry's store their data in a database and analyze it regularly. 
 
-\newpage
-\chapter{Testing}
-
-\newpage
-\chapter{Results and discussion}
-
-
-\newpage
 \chapter{Conclusion}
 
-\newpage
 \subfile{appendix}
 
 %===================================================
